--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -11,3 +11,8 @@ jobs:
           node-version: "14"
       - run: npm install -g bats
       - run: bats -v
+      - name: Flutter FVM config action
+      # You may pin to the exact commit or the version.
+      # uses: kuhnroyal/flutter-fvm-config-action@34c3905bc939a4ff9d9cb07d5a977493fa73b2aa
+        uses: kuhnroyal/flutter-fvm-config-action@v2.0
+      - run: flutter --version    
