--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -15,4 +15,4 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: kuhnroyal/flutter-fvm-config-action@34c3905bc939a4ff9d9cb07d5a977493fa73b2aa
         uses: kuhnroyal/flutter-fvm-config-action@v2.0
-      - run: flutter --version    
+      - run: fvm flutter --version    
